# orpheus-pet

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  setup.ps1
.github/workflows/: release-windows.yml
Orpheus-FastAPI/: app.py
Orpheus-FastAPI/outputs/: .gitkeep
Orpheus-FastAPI/tts_engine/: speechpipe.py
docs/: runtime-packs.md
llama/: .gitkeep
models/: .gitkeep
orpheus-pet/: ART-GUIDE.md  README.md  design-qa.md  index.html  package.json  panel.html  pnpm-lock.yaml  stack.config.example.json  vite.config.js
orpheus-pet/public/pets/: .gitkeep
orpheus-pet/src/: main.js  panel-layout.js  panel-placement.js  panel-window.js  panel.js  progress-feedback.js  styles.css
orpheus-pet/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
orpheus-pet/src-tauri/capabilities/: default.json
orpheus-pet/src-tauri/icons/: icon.icns
orpheus-pet/src-tauri/nsis/: installer-hooks.nsh
orpheus-pet/src-tauri/src/: lib.rs  main.rs  process_control.rs  runtime_installer.rs  selection.rs  stack.rs
orpheus-pet/src/pet/: lipsync.js  orpheus.js  renderer.js  samples.js
orpheus-pet/test/: panel-layout.test.js  panel-placement.test.js  panel-window.test.js  progress-feedback.test.js
scripts/: build-runtime-pack.ps1  orpheus_backend_entry.py  prefetch_snac.py  runtime-pack.requirements.txt
